--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,4 +25,6 @@
   "spellright.notificationClass": "warning",
   "vscodeMarkdownNotes.noteCompletionConvention": "noExtension",
   "vscodeMarkdownNotes.slugifyMethod": "github-slugger",
+  "gitdoc.enabled": true,
+  "gitdoc.commitValidationLevel": "none",
 }
